[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-semihosting = "0.5.0"
cortex-m-rt = "0.7.1"

embedded-hal = "0.2.3"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]